[package]
name = "xue_hua_video_cache"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "fs", "time", "sync", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "gzip"] }
md-5 = "0.11.0"
base64 = "0.22.1"
bytes = "1.12.0"
async-trait = "0.1.89"
log = "0.4.33"
tokio-util = "0.7.18"
once_cell = "1.21.4"
parking_lot = "0.12"
regex = "1.12.4"
indexmap = "2.14.0"
rand = "0.10.1"
urlencoding = "2.1.3"
async-recursion = "1.1.1"
futures-util = "0.3.32"
url = "2.5.8"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }